--- a/templates/chat.html
+++ b/templates/chat.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danaid - Bezpieczny Czat</title>
-    <link rel="stylesheet" href="chat_style.css">
+    <!-- Poprawiona ścieżka do pliku CSS -->
+    <link rel="stylesheet" href="static/css/chat_style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
 <body>
