--- a/templates/chat.html
+++ b/templates/chat.html
@@ -89,6 +89,7 @@
     </template>
 
     <!-- Skrypty JavaScript -->
+    <script src="static/js/WebSocketHandler.js"></script>
     <script src="static/js/chat_crypto.js"></script>
     <script src="static/js/SecureSessionManager.js"></script>
     <script src="static/js/ChatInterface.js"></script>
